<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.receipttracking.fragment.DetailsFragment"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:background="@layout/my_edit_text_border"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ev_merchant_name"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="60sp"
            android:hint="@string/merchant_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl"
     />

        <EditText
            android:id="@+id/ev_category"
            android:background="@layout/my_edit_text_border"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="60sp"
            android:hint="@string/category"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ev_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_merchant_name" />

        <EditText
            android:id="@+id/ev_date"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="60sp"
            android:hint="8/30/2019"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ev_category" />


        <EditText
            android:id="@+id/ev_amount"
            android:background="@layout/my_edit_text_border"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="60sp"
            android:hint="@string/amount"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ev_date"
            app:layout_constraintLeft_toLeftOf="@id/cl"
         />

        <ImageView
            android:id="@+id/iv_receipt_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="4sp"
            android:background="@color/colorAccent"
            android:padding="10sp"
            android:scaleType="fitXY"
            android:src="@drawable/receipt_tracker_background"
            android:text="@string/receipt_image"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_edit_image"
            app:layout_constraintLeft_toLeftOf="@id/cl"
            app:layout_constraintRight_toRightOf="@id/cl"
            app:layout_constraintTop_toBottomOf="@+id/ev_amount" />

        <Button
            android:elevation="1dp"
            android:id="@+id/btn_edit_image"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_margin="4sp"
            android:background="@layout/my_edit_text_border"
            android:text="@string/edit_add_receipt_image"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintLeft_toLeftOf="@id/cl"
            app:layout_constraintRight_toRightOf="@id/cl" />

        <CheckBox
            android:id="@+id/remove_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:elevation="33dp"
            android:text="Delete?"
            app:layout_constraintRight_toRightOf="@id/btn_submit"
            app:layout_constraintTop_toTopOf="@id/btn_submit"
            app:layout_goneMarginRight="200dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:text="@string/confirm_changes"
            android:textSize="14sp"
            android:background="@layout/my_edit_text_border"
            android:layout_margin="4sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/cl"
            app:layout_constraintRight_toRightOf="@id/cl" />



        <!-- previous and next buttons cut as of 9:44 on the 28th
        <Button
            android:id="@+id/btn_previous_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Previous Receipt"
            android:textSize="10dp"
            app:layout_constraintLeft_toLeftOf="@id/cl"
            app:layout_constraintBottom_toBottomOf="@id/cl" />

        <Button
            android:id="@+id/btn_next_edit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Next Receipt"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@id/cl"
            app:layout_constraintRight_toRightOf="@id/cl"/>
-->

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>